--- a/src/assets/css/HomePage.css
+++ b/src/assets/css/HomePage.css
@@ -660,9 +660,22 @@ section + section {
     grid-template-columns: 1fr;
   }
   .feedback-card {
-    padding: 20px;
+    padding: 15px;
+    max-height: 280px;
+  }
+  .feedback-card .rating {
+    margin-bottom: 10px;
+    font-size: 18px;
+  }
+  .feedback-card .feedback-text {
+    font-size: 13px;
+    margin-bottom: 10px;
+  }
+  .feedback-card .feedback-text::before,
+  .feedback-card .feedback-text::after {
+    font-size: 28px;
   }
   .hero-video-container {
-    height: 250px;
+    height: 300px; /* Alterado de 250px para 300px */
   }
 }
